app/assets/stylesheets/partials/_courses.scss
/* Course detail page */

$course-img-height: 250px;

.course-infobox {
  @include white-box;
  @include box-shadow-light;
  margin-bottom: 30px;

  .wrapper {
    position: relative;
    min-height: $course-img-height + 40px;
    width: 100%;

     img {
       height: $course-img-height;
       width: auto;
       float: left;
       margin: 20px 20px 20px 0px;
     }

     .content {
       display: block;
       padding: 15px;

       .title {
         font-weight: 400;
         font-size: 20px;
         padding-bottom: 10px;
       }
     }

    .options {
      position: absolute;
      bottom: 0px;
      right: 10px;

      img {
        height: 40px;
      }
    }
  }

  .subnav {
    border-top: 1px solid $panel-default-border;
    background-color: $gray-lighter;
    width: 100%;
    height: 32px;

    a {
      color: inherit;

      &:hover {
        color: $link-color;
      }
    }

    .entry {
      float: left;
      border-right: 1px solid $panel-default-border;
      background-color: inherit;
      padding: 5px 15px;
      white-space: nowrap;

      .active {
        font-weight: bold;
        border-bottom: 2px solid $link-hover-color;
      }
    }
  }

  .collapse-subnav {
    background-color: white;
    padding: 10px;
  }

}

/* Course listing */

.courses-wrapper {

  .courses {
    @include white-box;
    @include box-shadow-light;
    margin-bottom: 30px;
    width: 200px;
    height: 300px;
    float: left;

    &:hover {
      @include box-shadow-hover;
      cursor: pointer;
    }

    .course-image {
      border-bottom: 1px solid $panel-default-border;

      img {
        object-fit: cover;
        width: 100%;
        height: 130px;
        overflow: hidden;
      }
    }

    a {
      text-decoration: none;
      color: black;
    }

    .course-info {
      position: relative;
      height: 170px;
      width: 100%;
      padding: 10px;
      font-size: 12px;
      font-weight: 300;

      .name {
        font-size: 14px;
        font-weight: 500;
      }

      .provider {
        position: absolute;
        bottom: 10px;
        right: 10px;

        img {
          width: 100px;
          height: auto;
        }
      }
    }
  }
}

// Show 1 item per line for extra small screens,
// mainly phones (portrait)

@media(max-width: $screen-xs) {
  .courses-wrapper > .courses {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 200px;
    float: none;
  }
}

// Show 2 items per line for extra small screens,
// mainly phones (landscape)

@media(min-width: $screen-xs + 1) and (max-width: $screen-xs-max) {
  .courses-wrapper {
    display: block;
    width: 416px;
    margin: auto;
  }

  .courses-wrapper > .courses {
    &:nth-child(2n+1) {
      width: 200px;
      margin-right: 15.5px;
    }

    &:nth-child(2n+0) {
      width: 200px;
      margin-right: auto;
    }
  }
}

// Show 3 items per line for small and medium screens

@media(min-width: $screen-sm-min) and (max-width: $screen-md-max) {
  .courses-wrapper {
    width: 632px;
    display: block;
    margin: auto;
  }

  .courses-wrapper > .courses {
    &:nth-child(3n+1) {
      margin-left: auto;
      margin-right: 15.5px;
    }
    &:nth-child(3n+2) {
      margin-right: 15.5px;
    }
    &:nth-child(3n+0) {
      margin-right: auto;
    }
  }
}

// Show 4 items per line on large screens

@media(min-width: $screen-lg-min) {
  .courses-wrapper > .courses {
    &:nth-child(4n+1) {
      margin-right: 15.5px;
    }
    &:nth-child(4n+2) {
      margin-right: 15.5px;
    }
    &:nth-child(4n+3) {
      margin-right: 15.5px;
    }
    &:nth-child(4n+0) {
      margin-right: auto;
    }
  }
}

// Hide sidebar and show filter in another way
// for small and extra small screens

@media(max-width: $screen-sm-max) {
  .courses-filter {
    display: none;
  }
}

